# memory-safe-cpp

./: .gitignore  .gitmodules  .travis.yml  CHECKER-BUILD.md  CMakeLists.txt  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyOptions.h  JSONSafeDatabase.cpp  JSONSafeDatabase.h  LICENSE  README.md  STATIC-CHECKS.md  USEME.md
checker/: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  checkout.bat  checkout.sh  cmake-ninja-debug.bat  install.sh  set-path.bat  test.bat  test.sh
checker/doc/: CHECKER-BUILD-WINDOWS-DEBUG.md  CHECKER-BUILD.md  CHECKER-LINUX-QUICK-START.md  CHECKER-QUICK-START.md  CHECKER-RUN.md  CHECKER-TESTS.md  CHECKER.md  DEZOMBIEFY.md  INSTRUMENT.md
checker/nodecpp/: README.md
checker/src/: .clang-tidy  CMakeLists.txt  tidy.sh
checker/src/nodecpp-checker/: CMakeLists.txt  CheckerASTVisitor.h  CheckerData.cpp  CheckerData.h  ClangTidy.cpp  ClangTidy.h  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyModule.h  ClangTidyModuleRegistry.h  ClangTidyOptions.cpp  ClangTidyOptions.h  ConsistencyRule.cpp  ConsistencyRule.h  CoroutineASTVisitor.h  DeterminismRule.cpp  DeterminismRule.h  FlagRiia.h  JSONSafeDatabase.cpp  JSONSafeDatabase.h  MiscellaneousRule.cpp  MustCoAwaitRule.cpp  MustCoAwaitRule.h  NoSideEffectRule.cpp  NoSideEffectRule.h  NodecppASTVisitor.h  ReferenceOverCoAwaitRule.cpp  ReferenceOverCoAwaitRule.h  RuleC.h  RuleD.h  RuleM1.h  RuleS9.h  RuleS91.h
checker/src/nodecpp-dezombify/: CMakeLists.txt  Dezombify1ASTVisitor.h  Dezombify2ASTVisitor.h  NodeCppDezombify.cpp
checker/src/nodecpp-instrument/: BaseASTVisitor.h  CMakeLists.txt  CodeChange.cpp  CodeChange.h  DeunsequenceASTVisitor.h  Dezombiefy.cpp  Dezombiefy.h  DezombiefyHelper.h  DezombiefyRelaxASTVisitor.cpp  DezombiefyRelaxASTVisitor.h  DezombiefyRelaxAnalysis.cpp  DezombiefyRelaxAnalysis.h  Dezombify1ASTVisitor.h  Dezombify2ASTVisitor.h  ExpandUserIncludesAction.cpp  ExpandUserIncludesAction.h  InclusionRewriter.cpp  NodeCppDezombify.cpp  Op2CallFixExprVisitor.h  SequenceCheck.cpp  SequenceCheck.h  SequenceCheckASTVisitor.h  SequenceCheckAndFix.cpp  SequenceCheckAndFix.h  SequenceCheckExprVisitor.h  SequenceFix.cpp  SequenceFix.h  SequenceFixASTVisitor.h  UnwrapFixExprVisitor.h  UnwrapperASTVisitor.h
checker/src/nodecpp-safe-library/: NodeCppSafeLibrary.cpp  raiistdiofile.h
checker/src/nodecpp-safe-library-db/: CMakeLists.txt  NodeCppSafeLibrary.cpp
checker/src/safe-memory-odr/: CMakeLists.txt  SafeMemoryOdr.cpp
checker/src/safememory-checker/: CheckerASTVisitor.h  CheckerData.cpp  CheckerData.h  ClangTidy.cpp  ClangTidyDiagnosticConsumer.cpp  ClangTidyDiagnosticConsumer.h  ClangTidyModule.cpp  ClangTidyModuleRegistry.h  ClangTidyOptions.cpp  ClangTidyOptions.h  ConsistencyRule.cpp  DeterminismRule.cpp  MiscellaneousRule.cpp  MiscellaneousRule.h  MustCoAwaitRule.cpp  NoSideEffectRule.cpp  NoSideEffectRule.h  ReferenceOverCoAwaitRule.cpp  add_new_check.py
checker/src/safememory-instrument/: BaseASTVisitor.h  CodeChange.cpp  Dezombiefy.h  DezombiefyHelper.h  DezombiefyRelaxASTVisitor.h  Dezombify1ASTVisitor.h  InclusionRewriter.cpp  InclusionRewriter.h  NodeCppDezombify.cpp  SequenceCheckExprVisitor.h  UnwrapFixExprVisitor.h
checker/src/safememory-library-db/: CMakeLists.txt  NodeCppSafeLibrary.cpp
checker/src/safememory-odr/: SafeMemoryOdr.cpp
checker/test/: CMakeLists.txt  check_nodecpp_instrument.py  check_safememory_instrument.py  lit.cfg  lit.site.cfg.in
checker/test/checker/: c1.cpp  c2.cpp  c3.cpp  compile_flags.txt  d1.cpp  d2.cpp  m1.cpp  node.cpp  nodecpp-awaitable.cpp  nodecpp-deep-const.cpp  nodecpp-naked-struct.cpp  nodecpp-no-side-effect.cpp  nodecpp-var-decl.cpp  s1-1-1.cpp  s1-1.cpp  s1-3.cpp  s1-4.cpp  s1.cpp  s2.cpp  s3.cpp  s4.cpp  s5-1.cpp  s5-3.cpp  s5-7.cpp  s5-8.cpp  s6.cpp  s8.cpp  s8.json  s9.cpp  safe_memory_check_as_user_code.cpp  safe_memory_check_at_insantiation.cpp  safe_memory_check_at_instantiation.cpp
checker/test/instrument/: check_Z1.cpp  check_Z2.cpp  check_Z2_args.cpp  check_Z9.cpp  compile_flags.txt  dezombiefy_base.cpp  dezombiefy_template.cpp  dezombiefy_template_class.cpp  dezombiefy_template_func.cpp  dezombiefy_unwrap.cpp  dz_base.cpp  dz_constexpr_if.cpp  dz_param_pack.cpp  dz_template_class.cpp  dz_template_error_1.cpp  dz_template_func.cpp  dz_template_out_of_line.cpp  fix_Z1.cpp  fix_Z1_macro_error.cpp  fix_Z2.cpp  fix_Z2_args.cpp  fix_Z2_macro_error.cpp  fix_Z2_move.cpp  fix_Z2_op.cpp  fix_Z2_param_pack.cpp  fix_Z2_stmt.cpp  fix_Z2_this.cpp  include.h  instr_template.cpp  instrument.cpp  instrument_template.cpp
checker/test/instrument-sample/: build.bat  instrument_reference.cpp  instrument_this.cpp
checker/test/nodecpp-checker/: compile_flags.txt  nodecpp-array-expr.cpp  nodecpp-may-extend-decl.cpp  nodecpp-may-extend-lambda.cpp  nodecpp-naked-assignment.cpp  nodecpp-naked-struct.cpp  nodecpp-std-function.cpp  nodecpp-var-decl.cpp  rules.cpp  rules5.cpp  rules57.cpp  s1-1.cpp  s1-2.cpp  s1-4.cpp  s1.cpp  s2.cpp  s3.cpp  s4.cpp  s5-3.cpp  s6.cpp  s8.cpp  safe_library.json
checker/test/regression/: c1.cpp  c2.cpp  c3.cpp  compile_flags.txt  d1.cpp  d2.cpp  m1.cpp  node.cpp  nodecpp-array-expr.cpp  nodecpp-awaitable.cpp  nodecpp-deep-const.cpp  nodecpp-may-extend-decl.cpp  nodecpp-may-extend-lambda.cpp  nodecpp-naked-assignment.cpp  nodecpp-naked-struct.cpp  nodecpp-no-side-effect.cpp  nodecpp-std-function.cpp  nodecpp-var-decl.cpp  raw.cpp  s1-1-1.cpp  s1-1.cpp  s1-2.cpp  s1-3.cpp  s1-4.cpp  s1.cpp  s10-1.cpp  s2.cpp  s3.cpp  s4.cpp  s5-1.cpp  s5-3.cpp  s5-4.cpp  s5-7.cpp  s5-8.cpp  s6.cpp  s8.cpp  s8.json  s9-1.cpp  s9.cpp  safe_db_nodecpp.hpp  (+8 more)
checker/test/sample/: all-good.cpp  compile_flags.txt  nodecpp-no-side-effect-2.cpp  rules.cpp  (+13 more)
checker/tools/: teamcity-ninja-windows.bat  travis-build.sh  travis-ccache.sh  travis-windows-library-db.bat  travis-windows-sccache-warmup.bat  travis-windows.bat
src/nodecpp-checker/: CMakeLists.txt  ClangTidyDiagnosticConsumer.h  ClangTidyOptions.cpp  ClangTidyOptions.h
src/nodecpp-safe-library/: CMakeLists.txt
(+231 files in other folders)
